jquery + vue mix (Clean and readable code no bugs on any CRUD methods in front)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,3 @@
     align-items: flex-start;
     cursor: pointer;
 }
-
-.children {
-    display: none;
-}
